[project]
name = "cbrate"
version = "0.1.0"
description = "Get currency rates from cbr.ru"
authors = [
    {name = "Sergey Bryukhovskikh", email = "ksaok@ereb.ru"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
