[project]
name = "cbrate"
version = "0.1.0"
description = "Get currency rates from cbr.ru"
authors = [
    {name = "Sergey Bryukhovskikh", email = "ksaok@ereb.ru"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.16.1",
]
